--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "reactotron-react-js": "^3.3.1",
     "reactotron-redux": "^3.1.1",
     "reactotron-redux-saga": "^4.2.2"
